// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cll8gmc soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Yingdu Building
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="cwuw3pq soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about alignment 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              colspan="2"
              style="padding-bottom: 2px;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="2"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about arrangement 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-3srah8 soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        horizontal
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        vertical
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        inlineHorizontal
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        inlineVertical
      </span>
    </div>
  </div>
  <div
    class="c-3srah8 soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        auto
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        fixed
      </span>
    </div>
  </div>
  <div
    class="c-3srah8 soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        no border
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        border
      </span>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about border 1`] = `
<div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body c8aqdf7 soui-descriptions-border cwdx8ar soui-descriptions-table-layout-fixed cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body c8aqdf7 soui-descriptions-border cwdx8ar soui-descriptions-table-layout-fixed cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body c8aqdf7 soui-descriptions-border cwdx8ar soui-descriptions-table-layout-fixed"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Mobile
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              colspan="4"
            >
              Hometown
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cc0thze soui-descriptions-value"
              colspan="4"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about colums 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about responsive 1`] = `
<div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body c8aqdf7 soui-descriptions-border cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-3srah8 soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body cll8gmc soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cwuw3pq soui-descriptions-inline-table"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="cwuw3pq soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-k8n8iu soui-descriptions-item"
              >
                <div
                  class="c-eouzwa soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cvr3k3n soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-1luo5w soui-descriptions-wrapper"
  >
    <div
      class="caz7b2s soui-descriptions-header"
    >
      <div
        class="cbzv6ep soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-k8rt5j soui-descriptions-body c8aqdf7 soui-descriptions-border cy1y9d7 soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="cbzpp5z soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-nhzil soui-descriptions-row"
          >
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="cc0thze soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="cbvbc99 soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="cc0thze soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
